--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,35 @@
-﻿@{
+﻿
+@model List<Post>
+@{
+    Layout = "_LayoutBlog";
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    @foreach (Post item in Model)
+    {
+        <article id="post-@item.Id" class="post">
+            <h2 class="post-title">@item.Titulo</h2>
+            <span class="post-date">@item.Data</span>
+            <div class="post-content">
+                <p>@item.Texto</p>
+            </div>
+
+            <section id="comments-@item.Id" class="comments>
+                <h4>Comentários</h4>
+                <partial name="_ListaComentarios">
+                    <partial name="_ListaComentarios" model="@item.Comentarios">
+                        <partial name="_FormComentarios" model="@item.Id">
+            </section>
+
+        </article>
+
+    }
+
+    @for(int i=1;i<= (int)ViewData["Paginas"];i++)
+    {
+        <a href="/?p=@i">@i</a>
+    }
+
 </div>
+
