--- a/Views/Post/Cadastro.cshtml
+++ b/Views/Post/Cadastro.cshtml
@@ -7,6 +7,7 @@
   <p>@ViewData["Mensagem"]</p>
 
   <form id="frmCadastro" asp-controller="Post" asp-action="Cadastro" method="post">
+      <input type="hidden" asp-for="Id" />
       <p>
           <label asp-for="Titulo">Título</label><br/>
           <input asp-for="Titulo" />
